--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,12 @@
 .webview {
 	height: calc(100vh - 32px);
 	transition: 0.2s;
+	z-index: 500;
 }
 
 .webviewNative {
 	height: 100vh;
+	z-index: 500;
 }
 
 .hidden {
@@ -42,4 +44,48 @@
 
 .fade-out {
 	animation: fadeout 1s;
+}
+
+.offlineView {
+	z-index: 1;
+	height: calc(100vh - 32px);
+	background-color: #f1f1f1;
+	position: fixed;
+	width: 100% !important;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.offlineViewNative {
+	z-index: 1;
+	height: calc(100vh - 32px);
+	background-color: #f1f1f1;
+	position: fixed;
+	width: 100% !important;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.offlineText {
+	color: #343434;
+	font-size: 1rem;
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	user-select: none;
+	padding-right: 5vw;
+	padding-bottom: 5vh;
+}
+
+.offlineIcon {
+	max-height: 64px;
 }
